@@ -1,7 +1,8 @@
 import com.bmuschko.gradle.docker.tasks.image.Dockerfile
+import com.github.spotbugs.snom.SpotBugsTask
 import java.nio.charset.StandardCharsets.UTF_8
 
-val linkHomepage by extra("https://qameta.io/allure")
+val linkHomepage by extra("https://allurereport.org/")
 val linkCi by extra("https://ci.qameta.io/job/allure2")
 val linkScmUrl by extra("https://github.com/allure-framework/allure2")
 val linkScmConnection by extra("scm:git:git://github.com/allure-framework/allure2.git")
@@ -13,7 +14,7 @@ val qualityConfigsDir by extra("$gradleScriptDir/quality-configs")
 val spotlessDtr by extra("$qualityConfigsDir/spotless")
 
 tasks.wrapper {
-    gradleVersion = "8.1.1"
+    gradleVersion = "8.5"
 }
 
 plugins {
@@ -21,12 +22,14 @@ plugins {
     `java-library`
     `maven-publish`
     signing
+    checkstyle
+    pmd
+    id("com.github.spotbugs")
     id("com.bmuschko.docker-remote-api")
     id("io.github.gradle-nexus.publish-plugin")
     id("com.diffplug.spotless")
     id("com.gorylenko.gradle-git-properties")
     id("io.spring.dependency-management")
-    id("ru.vyarus.quality")
     id("org.owasp.dependencycheck")
 }
 
@@ -62,47 +65,51 @@ subprojects {
     apply(plugin = "java")
     apply(plugin = "signing")
     apply(plugin = "maven-publish")
-    apply(plugin = "ru.vyarus.quality")
+    apply(plugin = "checkstyle")
+    apply(plugin = "pmd")
+    apply(plugin = "com.github.spotbugs")
     apply(plugin = "com.diffplug.spotless")
     apply(plugin = "io.spring.dependency-management")
 
+    val orgSlf4jVersion = "2.0.17"
+    val comSquareupRetrofit2Version = "2.11.0"
+
     dependencyManagement {
         imports {
-            mavenBom("com.fasterxml.jackson:jackson-bom:2.15.2")
-            mavenBom("org.junit:junit-bom:5.10.0")
-            mavenBom("io.qameta.allure:allure-bom:2.24.0")
+            mavenBom("com.fasterxml.jackson:jackson-bom:2.18.3")
+            mavenBom("com.squareup.okhttp3:okhttp-bom:4.12.0")
+            // latest version that supports java 8
+            mavenBom("com.vladsch.flexmark:flexmark-all:0.62.2")
+            mavenBom("io.qameta.allure:allure-bom:2.29.1")
+            mavenBom("org.junit:junit-bom:5.12.0")
         }
         dependencies {
-            dependency("ch.qos.logback:logback-classic:1.3.8")
+            dependency("ch.qos.logback:logback-classic:1.3.15")
             dependency("com.beust:jcommander:1.82")
-            dependency("com.github.spotbugs:spotbugs-annotations:4.7.3")
-            dependency("com.opencsv:opencsv:4.6")
-            dependency("commons-beanutils:commons-beanutils:1.9.4")
-            dependency("commons-io:commons-io:2.13.0")
+            dependency("com.github.spotbugs:spotbugs:4.9.2")
+            dependency("com.opencsv:opencsv:5.9")
+            dependency("com.puppycrawl.tools:checkstyle:10.21.4")
+            dependency("com.squareup.retrofit2:converter-jackson:${comSquareupRetrofit2Version}")
+            dependency("com.squareup.retrofit2:retrofit:${comSquareupRetrofit2Version}")
+            dependency("commons-beanutils:commons-beanutils:1.10.1")
+            dependency("commons-io:commons-io:2.18.0")
             dependency("javax.xml.bind:jaxb-api:2.3.1")
+            dependency("net.sourceforge.pmd:pmd-java:7.11.0")
             dependency("org.allurefw:allure1-model:1.0")
-            dependency("org.apache.commons:commons-lang3:3.13.0")
+            dependency("org.apache.commons:commons-collections4:4.4")
+            dependency("org.apache.commons:commons-lang3:3.17.0")
             dependency("org.apache.httpcomponents:httpclient:4.5.14")
-            dependency("org.apache.tika:tika-core:2.9.0")
-            dependency("org.assertj:assertj-core:3.24.2")
-            dependency("org.eclipse.jetty:jetty-server:9.4.51.v20230217")
-            dependency("org.freemarker:freemarker:2.3.32")
-            dependency("org.mockito:mockito-core:5.5.0")
-            dependency("org.projectlombok:lombok:1.18.28")
-            dependency("org.zeroturnaround:zt-zip:1.16")
-            dependencySet("org.slf4j:2.0.7") {
-                entry("slf4j-api")
-                entry("slf4j-nop")
-                entry("slf4j-simple")
-            }
-            dependencySet("com.squareup.retrofit2:2.9.0") {
-                entry("converter-jackson")
-                entry("retrofit")
-            }
-            dependencySet("com.vladsch.flexmark:0.62.2") {
-                entry("flexmark")
-                entry("flexmark-ext-tables")
-            }
+            dependency("org.apache.tika:tika-core:2.9.3")
+            dependency("org.assertj:assertj-core:3.27.3")
+            dependency("org.eclipse.jetty:jetty-server:12.0.16")
+            dependency("org.freemarker:freemarker:2.3.34")
+            dependency("org.junit-pioneer:junit-pioneer:2.3.0")
+            dependency("org.mockito:mockito-core:5.17.0")
+            dependency("org.projectlombok:lombok:1.18.36")
+            dependency("org.slf4j:slf4j-api:${orgSlf4jVersion}")
+            dependency("org.slf4j:slf4j-nop:${orgSlf4jVersion}")
+            dependency("org.slf4j:slf4j-simple:${orgSlf4jVersion}")
+            dependency("org.zeroturnaround:zt-zip:1.17")
         }
     }
 
@@ -128,6 +135,7 @@ subprojects {
     }
 
     tasks.test {
+        useJUnitPlatform()
         systemProperty("org.slf4j.simpleLogger.defaultLogLevel", "debug")
         systemProperty("allure.model.indentOutput", "true")
         systemProperty("junit.jupiter.execution.parallel.enabled", true)
@@ -137,6 +145,12 @@ subprojects {
         }
         maxHeapSize = project.property("test.maxHeapSize").toString()
         maxParallelForks = Integer.parseInt(project.property("test.maxParallelForks") as String)
+        jvmArgs = listOf(
+            "--add-opens",
+            "java.base/java.lang=ALL-UNNAMED",
+            "--add-opens",
+            "java.base/java.util=ALL-UNNAMED",
+        )
     }
 
     tasks.processTestResources {
@@ -147,29 +161,46 @@ subprojects {
         }
     }
 
-    quality {
-        configDir = "$gradleScriptDir/quality-configs"
-        excludeSources = fileTree("build/generated-sources")
-        exclude("**/*.json")
-        checkstyleVersion = "8.36.1"
-        pmdVersion = "6.28.0"
-        spotbugsVersion = "4.1.2"
-        codenarcVersion = "1.6"
-        spotbugs = true
-        codenarc = true
-        pmd = true
-        checkstyle = true
-        htmlReports = false
+    fun excludeGeneratedSources(source: FileTree): FileTree = (source - fileTree("build/generated-sources")).asFileTree
 
-        afterEvaluate {
-            val spotbugs = configurations.findByName("spotbugs")
-            if (spotbugs != null) {
-                dependencies {
-                    spotbugs("org.slf4j:slf4j-simple")
-                    spotbugs("com.github.spotbugs:spotbugs:4.7.3")
-                }
-            }
-        }
+    checkstyle {
+        toolVersion = dependencyManagement.managedVersions["com.puppycrawl.tools:checkstyle"]!!
+        configDirectory = rootProject.layout.projectDirectory.dir("gradle/quality-configs/checkstyle")
+    }
+
+    pmd {
+        toolVersion = dependencyManagement.managedVersions["net.sourceforge.pmd:pmd-java"]!!
+        ruleSets = listOf()
+        ruleSetFiles = rootProject.files("gradle/quality-configs/pmd/pmd.xml")
+        targetJdk = TargetJdk.VERSION_1_7
+    }
+
+    spotbugs {
+        toolVersion = dependencyManagement.managedVersions["com.github.spotbugs:spotbugs"]!!
+        excludeFilter = rootProject.file("gradle/quality-configs/spotbugs/exclude.xml")
+    }
+
+    tasks.withType(Checkstyle::class) {
+        source = excludeGeneratedSources(source)
+    }
+
+    tasks.withType(Pmd::class) {
+        source = excludeGeneratedSources(source)
+    }
+
+    tasks.withType(SpotBugsTask::class) {
+    }
+
+    tasks.checkstyleTest {
+        enabled = false
+    }
+
+    tasks.pmdTest {
+        enabled = false
+    }
+
+    tasks.spotbugsTest {
+        enabled = false
     }
 
     spotless {
@@ -222,7 +253,11 @@ subprojects {
                 pom {
                     name.set(project.name)
                     description.set("Module ${project.name} of Allure Framework.")
-                    url.set("https://github.com/allure-framework/allure2")
+                    url.set("https://allurereport.org/")
+                    organization {
+                        name.set("Qameta Software")
+                        url.set("https://qameta.io/")
+                    }
                     licenses {
                         license {
                             name.set("The Apache License, Version 2.0")
@@ -234,11 +269,13 @@ subprojects {
                             id.set("baev")
                             name.set("Dmitry Baev")
                             email.set("dmitry.baev@qameta.io")
+                            url.set("https://github.com/baev")
                         }
                         developer {
                             id.set("eroshenkoam")
                             name.set("Artem Eroshenko")
                             email.set("artem.eroshenko@qameta.io")
+                            url.set("https://github.com/eroshenkoam")
                         }
                     }
                     scm {
@@ -249,6 +286,10 @@ subprojects {
                     issueManagement {
                         system.set("GitHub Issues")
                         url.set("https://github.com/allure-framework/allure2/issues")
+                    }
+                    ciManagement {
+                        system.set("Github Actions")
+                        url.set("https://github.com/allure-framework/allure-java/actions")
                     }
                     versionMapping {
                         usage("java-api") {
@@ -280,7 +321,7 @@ subprojects {
         }
     }
 
-    val pluginsDir = "$buildDir/plugins/"
+    val pluginsDir = layout.buildDirectory.dir("plugins")
     val copyPlugins by tasks.creating(Sync::class) {
         group = "Build"
         dependsOn(allurePlugin)
@@ -291,11 +332,6 @@ subprojects {
             segments[0] = segments[0].replace("-${project.version}", "")
         }
         includeEmptyDirs = false
-    }
-
-    repositories {
-        mavenLocal()
-        mavenCentral()
     }
 }
 
